samples/_failures_safe/1761801540_fe6002_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_873ef75f.c: In function ‘main’:
./samples/SAFE/__tmp_873ef75f.c:149:13: error: expected declaration or statement at end of input
  149 |             print_matrix(&result);
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_873ef75f.c:149:13: error: expected declaration or statement at end of input
